--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,27 @@
 *.slo
 *.lo
 *.o
+*.obj
 
 # Compiled Dynamic libraries
 *.so
 *.dylib
+*.dll
 
 # Compiled Static libraries
 *.lai
 *.la
 *.a
+*.lib
+
+# Visual studio stuff
+*.sdf
+*.opensdf
+*.rc
+*.suo
+*.sln
+*.vcxproj
+*.user
+*.aps
+*.ico
+ipch/
